# CityHeroes

./: .dockerignore  .env  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose-dev.yml  docker-compose.env  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  solo.bak  solo.dir  tg_bot.py
CityHeroes/: asgi.py  celery.py  settings.py  urls.py  wsgi.py  yasg.py
animals/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
animals/migrations/: 0001_initial.py  0002_initial.py  0002_remove_animals_images_animals_images.py  0003_rename_name_images_title.py
animals/tests/: test_api.py  test_serializers.py
chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  tokenizator.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py  0002_rename_user_message_sender_personalmessage.py  0003_message_image.py  0003_personalmessage_image.py  0004_message_new_field.py
chat/tests/: test_serializers.py  test_websocket.py
chats/: urls.py  views.py
companies/: admin.py  models.py
companies/migrations/: 0001_initial.py
docker/nginx/: Dockerfile  default_location  nginx.conf
docker/test/: docker-compose.yml  test.env
forms/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
forms/migrations/: 0001_initial.py  0002_initial.py
tg_bot/: admin.py  apps.py  handlers.py  models.py
users/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
(+27 files in other folders)
